--- a/carsified/carsified/Views/Home/Index.cshtml
+++ b/carsified/carsified/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    gewgweε;ςε;ςε
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Carsified</h1>
+    
 </div>
