--- a/carsified/carsified/Views/Home/login.cshtml
+++ b/carsified/carsified/Views/Home/login.cshtml
@@ -3,7 +3,20 @@
 }
 
 <div class="text-center">
-    
-    <button>login</button>
+    <div class="well bs-component col-md-offset-1 col-md-4 ">
+    <form class="form-horizontal" id="loginForm">
+        <fieldset class="col-md-12">
+        <div class="form-group label-floating is-empty">
+            <label class="control-label" for="username">Όνομα Χρήστη</label>
+            <input class="form-control" id="username" type="text" required>
+        </div>
+        <div class="form-group label-floating is-empty">
+            <label class="control-label" for="password">Password</label>
+            <input class="form-control" id="password" type="text" required>
+        </div>
 
+            <button>login</button>
+        </fieldset>
+    </form>
+    </div>
 </div>
